# SCPMD-solving

./: README.md
LICENSES/: LICENSE  LICENSE_Facebook  LICENSE_GridKit  LICENSE_SC_PROBLOG
benchmarks/: README.md
benchmarks/facebook/initial-experiments/: facebook_s20_c0_with_10_queries.pl  facebook_s20_c0_with_all_queries.pl  facebook_s20_c1_with_10_queries.pl  facebook_s20_c1_with_all_queries.pl  facebook_s25_c0_with_12_queries.pl  facebook_s25_c0_with_all_queries.pl  facebook_s25_c1_with_12_queries.pl  facebook_s25_c1_with_all_queries.pl  facebook_s30_c0_with_15_queries.pl  facebook_s30_c1_with_15_queries.pl  facebook_s35_c0_with_18_queries.pl
configuration/: README.md
configuration/runners/gecode/: params.pcs  run_gecode.py
configuration/runners/gurobi/: params.pcs  run_gurobi.py
configuration/runners/oscar/: params.pcs  run_oscar.py
configuration/scenarios/gecode/: fb_instances_test.txt  fb_scenario.txt  pgrid_instances.txt  pgrid_scenario.txt
examples/: README.md  cp_decomposition_pipeline.py  global_scmd_propagator_pipeline.py  mip_decomposition_pipeline.py
modified-code/: README.md
modified-code/builders/: BDDbuilder.py  SDDbuilder.py  bdd_reader.py  maxprob_mip.py  mipify_sdd.py  sdd2cp.py
modified-code/configurable-GAC-OBDD-decomposition/: CMakeLists.txt  setupdev.sh
modified-code/configurable-GAC-OBDD-decomposition/src/: bdd.hpp  bddModel.cpp  bddModel.hpp  main.cpp
modified-code/configurable-OBDD-decomposition/: setupdev.sh
modified-code/configurable-SDD-decomposition/: Makefile  README.txt
results/: README.md  configurations.md
(+2042 files in other folders)
